# CMakeList.txt : CMake project for TravellingSalesman
cmake_minimum_required (VERSION 3.8)

project ("TravellingSalesman")

# Add source to this project's executable.
add_executable (TravellingSalesman "TravellingSalesman.cpp" "TravellingSalesman.h")

# TODO: Add tests and install targets if needed.
